--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,6 @@
     "titleBar.inactiveBackground": "#036ad399",
     "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#036ad3"
+  "peacock.color": "#036ad3",
+  "liveServer.settings.port": 5501
 }
